increment igv on factura
increment igv on factura

--- a/LavanderiaSistVenta/src/FormInternos/JIListaVentasPendientes.form
+++ b/LavanderiaSistVenta/src/FormInternos/JIListaVentasPendientes.form
@@ -160,7 +160,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -200,7 +200,7 @@
                           <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
                           <Component id="jlblTotal1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="7" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -455,7 +455,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel15" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="tbxserie1" alignment="0" min="-2" pref="61" max="-2" attributes="0"/>
+                      <Component id="tbxSaldo" alignment="0" min="-2" pref="61" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -481,7 +481,7 @@
                       <Group type="102" attributes="0">
                           <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="tbxserie1" min="-2" max="-2" attributes="0"/>
+                          <Component id="tbxSaldo" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
@@ -561,7 +561,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tbxTipoServicio1">
         </Component>
-        <Component class="javax.swing.JTextField" name="tbxserie1">
+        <Component class="javax.swing.JTextField" name="tbxSaldo">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
           <Properties>
