--- a/LavanderiaSistVenta/src/FormInternos/JIAnularVentas.form
+++ b/LavanderiaSistVenta/src/FormInternos/JIAnularVentas.form
@@ -61,7 +61,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="">
+            <TitledBorder>
               <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
                 <EtchetBorder/>
               </Border>
@@ -186,7 +186,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="9" rowCount="0">
+              <Table columnCount="10" rowCount="0">
                 <Column editable="true" title="Cod_venta" type="java.lang.Object"/>
                 <Column editable="true" title="Serie" type="java.lang.Object"/>
                 <Column editable="true" title="Nro" type="java.lang.Object"/>
@@ -196,6 +196,7 @@
                 <Column editable="true" title="Importe total" type="java.lang.Object"/>
                 <Column editable="true" title="FlagPSEVenta" type="java.lang.Object"/>
                 <Column editable="true" title="FlagPSEIngreso" type="java.lang.Object"/>
+                <Column editable="true" title="Fecha Env&#xed;o" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
